# fastapi-casssandra-template

./: .gitignore  app.py  pyproject.toml
service/: database.py  logging_config.py  settings.py
service/api/: ping.py
